--- a/zenith-vault/package.json
+++ b/zenith-vault/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -21,9 +23,12 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zenith-vault": "file:"
+    "zenith-vault": "file:",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
